# organic_ratio

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt  run.ipynb  run.py  run_baseline.py  run_clean.py  run_cohort_aggregation.py  run_mmm_analyze.py  run_mmm_attribution.py  run_mmm_data.py  run_mmm_eval.py  run_mmm_train.py  run_preprocessing.py  run_target_build.py  run_train.py
.claude/: settings.local.json
conf/base/: data.yml  globals.yml  parameters.yml
notebooks/: eda.ipynb
src/organic_ratio/core/cohort/: aggregator.py  clean.py  merge.py  sources.py  target.py
src/organic_ratio/core/loaders/: loader.py  materialize.py
src/organic_ratio/core/modeling/: baseline.py  metrics.py  mmm_data.py  mmm_model.py  preprocess.py  pymc_model.py
src/organic_ratio/core/preprocessing/: ads.py  costs.py  devices.py  iap.py  installs.py  personal.py  preprocesser_registry.py  sessions.py
src/organic_ratio/core/preprocessing/common/: dtypes.py
src/organic_ratio/utils/: config.py
